<resources>
    <string name="app_name">DogBook</string>
    <string name="myDog">MyDog</string>
    <string name="activities">Activity</string>
    <string name="friends">Friends</string>
    <string name="article">Articles</string>
    <string name="chats">Chats</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="signIn">Sign-In</string>
    <string name="signUp">Sign-Up</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="age">Age</string>
    <string name="Hide">Hide</string>
    <string name="man">Male</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="addDog">Add Dog</string>
    <string name="signOut">Sign Out</string>
    <string name="dogInfo">Dog Info</string>
    <string name="takePicture">Take Picture</string>
    <string name="choosePicture">Choose Picture</string>
    <string name="changeProfilePhoto">Change Photo</string>
    <string name="changeBackgroundPhoto">Change Background</string>
    <string name="calendar">Calendar</string>
    <string name="addPicture">choose picture</string>
    <string name="saySomething">Say Something</string>
    <string name="addArticle">Add Article</string>
    <string name="submit">Submit</string>
    <string name="variety">Variety</string>
    <string name="gender">Gender</string>
    <string name="getOut">Get Out</string>
    <string name="goOut">Go Out</string>
    <string name="mile">mile</string>
    <string name="meter">meter</string>
    <string name="hint_etLocationName">location name or address</string>
    <string name="text_btDistance">Distance</string>
    <string name="text_btDirect">Direct</string>
    <string name="msg_LastLocationNotAvailable">The last location is not available, please wait for a while</string>
    <string name="msg_GoogleApiClientConnectionFailed">GoogleApiClient connection failed</string>
    <string name="msg_GoogleApiClientConnectionSuspended">GoogleApiClient connection suspended</string>
    <string name="msg_LocationNotAvailable">Location is not available</string>
    <string name="msg_InvalidInput">Invalid input</string>
    <string name="text_ShouldGrant">Permission to access location should be granted</string>
    <string name="walk">Go Out</string>
    <string name="addEvent">Add Event</string>
    <string name="eventName">Event Name</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="overview">Overview</string>


    <string name="text_MessageEmpty">Message is Empty</string>
    <string name="messageEmpty">Message is Empty</string>
    <string name="msg_NoNewsFound">No news found</string>
    <string name="msg_NoSpotsFound">No activities found</string>
    <string name="msg_MapNotDisplayed">Map cannot be displayed</string>
    <string name="msg_ClickAgain">Please click the item again</string>
    <string name="msg_NoNetwork">no network connection available</string>
    <string name="msg_InsertSuccess">Insert successfully</string>
    <string name="msg_InsertFail">Insert fail</string>
    <string name="msg_UpdateSuccess">Update successfully</string>
    <string name="msg_UpdateFail">Update fail</string>
    <string name="msg_DeleteSuccess">Delete successfully</string>
    <string name="msg_DeleteFail">Delete fail</string>
    <string name="msg_NameIsInvalid">Activity name is invalid</string>
    <string name="msg_NoImage">No image</string>
    <string name="msg_NoDataFound">No data found</string>
    <string name="text_NoCameraApp">no camera apps found</string>
    <string name="text_Exit">Exit</string>
    <string name="msg_WantToExit">Do you really want to exit?</string>
    <string name="text_Yes">Yes</string>
    <string name="text_No">No</string>
    <string name="text_Activity">Activity</string>
    <string name="messageBoard">Message Board</string>

</resources>
