<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/ic_add"
        style="@style/SignUp"/>


    <EditText
        android:id="@+id/etNameAddDog"
        style="@style/SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_alignBottom="@id/ivProfilePhoto"
        android:layout_toRightOf="@id/ivProfilePhoto"/>

    <LinearLayout
        android:id="@+id/llBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/ivProfilePhoto">

        <EditText

            android:id="@+id/etBirthdayAddDog"
            style="@style/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/birthday"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/etAgeAddDog"
            style="@style/SignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number" />

    </LinearLayout>

    <RadioGroup
        style="@style/SignUp"
        android:id="@+id/rgGenderAddDog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llBirthday"
        android:layout_alignLeft="@id/ivProfilePhoto">

        <RadioButton
            android:id="@+id/rbHideAddDog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Hide" />

        <RadioButton
            android:id="@+id/rbMaleAddDog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/rbFemaleAddDog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            />

    </RadioGroup>

    <Spinner
        android:id="@+id/sVarietyAddDog"
        style="@style/SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgGenderAddDog"/>

    <Button
        android:id="@+id/btnAddDog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_alignRight="@id/etNameAddDog"/>

    <Button
        android:id="@+id/btnCancelAddDog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_toLeftOf="@id/btnAddDog"/>


</RelativeLayout>
