<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        style="@style/mainToolBar"
        android:id="@+id/tbAddArticle"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/addArticle"
                android:textSize="24dp"/>

            <ImageView
                android:id="@+id/ivLeftToolbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_arrow_back_black_24dp"/>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                style="?android:attr/borderlessButtonStyle"
                android:layout_centerVertical="true"
                android:text="send"
                />



        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:id="@+id/svAddArticle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tbAddArticle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/etContentAddArticle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/saySomething"
                android:layout_margin="10dp"/>

            <ImageView
                android:layout_below="@id/etContentAddArticle"
                android:id="@+id/ivArticlePhotoAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true" />

            <Button
                android:id="@+id/btnGetPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:layout_below="@id/ivArticlePhotoAdd"
                android:textColor="@color/button"
                android:text="@string/addPicture"/>

        </RelativeLayout>
    </ScrollView>




</RelativeLayout>
