<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBackgroundDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfilePhotoDialog"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:elevation="5dp"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="3dp" />


        <TextView
            android:id="@+id/tvNameDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivProfilePhotoDialog"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:text="name"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/tvInfoDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNameDialog"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="5dp"
            android:text="info"
            android:textAlignment="center"
            android:textSize="16dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvInfoDialog"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/goOut"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_directions_walk_black_24dp"
                android:text="@string/goOut"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/changeProfilePhoto"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_insert_emoticon_black_24dp"
                android:text="@string/changeProfilePhoto"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/signOut"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_exit_to_app_black_24dp"
                android:text="@string/signOut"
                android:textSize="11sp"
                tools:ignore="SmallSp" />
        </LinearLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>
